# assistant

./: .gitignore  .pre-commit-config.yaml  README.md  playwright_test.py  pyproject.toml
assistant/: browser.py  utils.py
assistant/agents/: agent_utils.py  grocery_agent.py
assistant/tools/: grocery.py  webscraper.py
evals/: evals_scratch.py
tests/: test_browser.py  test_utils.py
tests/tools/: test_grocery.py  test_webscraper.py
