[tool.poetry]
name = "assistant"
version = "0.1.0"
description = "Personal assistant multi-agent"
authors = ["Zijian Wu <zijian.wu14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.59.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
