[tool.poetry]
name = "assistant"
version = "0.1.0"
description = "Personal assistant multi-agent"
authors = ["Zijian Wu <zijian.wu14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.59.8"
requests = "^2.32.3"
requests-mock = "^1.12.1"
beautifulsoup4 = "^4.12.3"
playwright = "^1.49.1"
setuptools = "^75.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.0.1"
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["E", "F", "W", "C90"]  # Common Flake8 rules (E, F, W, and McCabe)
lint.ignore = []                      # Remove or customize ignored rules
line-length = 88                 # Match with Flake8's default
preview = true
